welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:6: error: not found: value gaiche
gauche;avance;avance;gaiche;avance;
                     ^