welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse
for (i <- 1 to 3) {
  gauche;
  for (i<- 1 to 4) avance
}
gauche;avance;avance;gaiche;avance;
baisseBrosse
droite;avance;avance;droite;avance;gauche